--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap');
+
 .nav> ul{
     display: flex;
     justify-content: space-between;
@@ -11,27 +13,27 @@
 
 .banner-img{
     display: block;
-    margin: auto;
-    
+    margin: auto; 
 }
+
 .banner-title{
 color: rgb(13, 19, 33);
 font-family: Azeret Mono;
 font-size: 48px;
 font-weight: 800;
-/* line-height: 68px;
-letter-spacing: 0%; */
 text-align: center;
 }
 
 .banner-description{
 color: rgb(13, 19, 33);
 font-family: Azeret Mono;
-font-size: 16px;
+font-size: 20px;
 font-weight: 400;
 line-height: 26px;
 letter-spacing: 0%;
 text-align: center;
+opacity: 0.7;
+
 }
 
 .btn{
@@ -39,11 +41,92 @@ color: rgb(255, 255, 255);
 font-family: Azeret Mono;
 font-size: 20px;
 font-weight: 600;
-/* line-height: 23px; */
 text-align: center;
 border-radius: 8px;
 background: rgb(13, 19, 33);
 padding: 21px 24px 21px 24px;
 display: block;
 margin: auto;
+}
+
+main{
+    width: 1440px;
+    margin: 0 auto;
+}
+
+.Why1{ 
+    /* margin: auto;
+    max-width: 60%; */
+    padding: 10px;
+    border-radius: 16px;
+    background: rgba(13, 19, 33, 0.02);
+    margin-top: 80px;
+}
+
+.title{
+    margin-top: 50px;
+    text-align: center;
+    color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 32px;
+font-weight: 800;
+}
+
+.why-description{
+color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 16px;
+font-weight: 400;
+text-align: center;
+opacity: 0.7;
+padding: 20px 97px 20px 97px;
+
+}
+
+.section-1{
+display: flex;
+flex-direction: row;
+justify-content: space-between; 
+align-items: center;
+background-color: white;
+padding: 48px;
+margin: 48px 97px;
+
+
+}
+
+.column1{
+    background-color: white;
+    margin: 32px 0px;
+}
+.column2{
+    background-color: white;
+}
+
+.btn2{
+    color: rgb(97, 92, 92);
+    font-family: Azeret Mono;
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+    padding: 15px 20px 15px 20px;
+    border: none;
+    box-sizing: border-box;
+    border: 1px solid rgb(13, 19, 33);
+    opacity: 0.7;
+
+}
+.pera{
+    opacity: 0.7;
+
+}
+
+.heading{
+color: rgba(13, 19, 33, 0.7);
+font-family: Azeret Mono;
+font-size: 24px;
+font-weight: 700;
+line-height: 36px;
+letter-spacing: 0%;
+text-align: left;
 }
