--- a/style.css
+++ b/style.css
@@ -120,7 +120,6 @@ margin: 48px 97px;
     font-family: Azeret Mono;
     text-align: center;
 
-
 }
 .heading{
 color: rgba(13, 19, 33, 0.7);
@@ -203,4 +202,69 @@ color: rgb(13, 19, 33);
 font-family: Azeret Mono;
 font-size: 16px;
 font-weight: 700;
+}
+ 
+/* section 4 */
+
+
+.Support{
+    
+    background-image: url(assets/handshake.jpg);
+    width: 1450px;
+    height: 550px;
+    border-radius: 16px;
+}
+
+.support-title{
+padding-top: 180px;
+color: rgb(255, 255, 255);
+font-family: Azeret Mono;
+font-size: 32px;
+font-weight: 700;
+text-align: center;
+
+}
+
+
+.support-discription{
+color: rgb(255, 255, 255);
+font-family: Azeret Mono;
+font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+letter-spacing: 0%;
+text-align: center;
+}
+
+input[type=text] {
+    width: 30%;
+    padding: 20px 50px;
+    margin-left: 450px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box; 
+    border: none; 
+  }
+  input[type=submit]{
+    width: 15%;
+
+  }
+
+  .btn3{
+    border-radius: 4px;
+    width: 8%;
+    padding: 20px 20px;
+background: rgb(255, 255, 255);
+border: none;
+margin-left: 20px;
+font-weight: 800;
+
+}
+
+.pera1{
+    opacity: 0.7;
+    font-size: 16px;
+    font-family: Azeret Mono;
+    text-align: left;
+
 }
