--- a/style.css
+++ b/style.css
@@ -268,3 +268,28 @@ font-weight: 800;
     text-align: left;
 
 }
+
+.footer{
+    margin-top: 50px;
+    display: flex;
+    gap: 1150px;
+    
+}
+
+footer{
+   
+    background: rgba(13, 19, 33, 0.03);
+}
+
+.Commitment{
+    color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 16px;
+font-weight: 600;
+text-align: center;
+}
+
+.social-link img{
+    padding: 10px;
+    /* margin: 10px; */
+}
